--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <img class="portrait" src="https://secure.gravatar.com/avatar/6b030f9d40af0aacef77ba4ba2076985?s=256">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
