--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -80,7 +80,7 @@ html {
   color: #fff;
   margin-top: 0;
   font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  font-size: 2.4rem;
 }
 
 /* Sidebar nav */
@@ -249,6 +249,23 @@ a.sidebar-nav-item:focus {
   color: #8f5536;
 }
 
-.page-title {
-  color: #6a9fb5;
+/* Dark Blue */
+.theme-base-darkblue .sidebar {
+  background-color: #535557;
+}
+.theme-base-0f .content a,
+.theme-base-0f .related-posts li a:hover {
+  color: #535557;
+}
+
+.page-title,
+.post-title,
+.post-title a {
+  color: #535557;
+}
+
+.portrait {
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
