--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,9 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+      <a class="sidebar-nav-item" href="{{ site.author.url }}">Website</a>
       <a class="sidebar-nav-item" href="{{ site.author.github }}">GitHub</a>
+      <a class="sidebar-nav-item" href="{{ site.author.twitter }}">Twitter</a>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
